# rekindle

./: .gitignore  .gitmessage  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  BUILD_STATUS.md  CA-MTL-3_SETUP_GUIDE.md  CLAUDE.md  DEVELOPMENT.md  ENV_SETUP.md  MANUAL_TESTING_GUIDE.md  README.md  SSE_FLOW_DOCUMENTATION.md  SSE_IMPLEMENTATION.md  TEST_AUTH.md  TEST_SUMMARY.md  dev  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  Dockerfile.dev  IMPROVEMENTS_TASKS_3.5_3.6.md  MIGRATION_GUIDE.md  README.md  REVIEW_TASKS_3.5_3.6.md  env.example  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_create_restoration_jobs.py
backend/app/: main.py  run_restore.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  database.py  redis_client.py  types.py
backend/comfyui_files/: extra_model_paths.yaml  rp_handler.py
backend/migrations/: 001_add_thumbnail_s3_key.sql  002_ensure_thumbnail_consistency.sql  003_create_photos_table.sql  004_create_users_table.sql  005_add_deletion_fields.sql  006_create_audit_logs_table.sql  HOW_TO_APPLY_005.md  MIGRATION_GUIDE.md  README.md  create_new_schema.sql
backend/scripts/: check_gpu_availability.py  cleanup_db.py  cleanup_legacy_photos.py  cleanup_restore_attempts.py  delete_old_photos.py  launch_runpod_pod.py  list_volumes.py  migrate_s3_keys_to_user_scoped.py  runpod_upload.py  test-presigned-access.sh  test_boto3_direct.py  test_comfyui_workflow.py  test_s3_connection.py  test_storage_isolation.py
backend/tests/: README.md  conftest.py  test_config.py
(+381 files in other folders)
