[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "boto3>=1.40.37",
    "celery>=5.5.3",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
    "loguru>=0.7.2",
    "pillow>=10.0.0",
    "requests>=2.32.5",
    "email-validator>=2.3.0",
    "flower>=2.0.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as an integration test (deselect with '-m \"not integration\"')",
]
